# PyPe9

./: .gitignore  Dockerfile  Kinetic_Extension.py  README.rst  setup.py
bash/: plot_all_connections
doc/: cerebellar_cortex.graphml  doxyfile  doxygen_index.html  project_strategy.txt  software_workflow.graphml
doc/dcn/: input_resistance.txt
doc/purkinje/: notes-from-LM-2011-11-8.txt  notes-from-LM-2011-12-6.txt  notes-from-ind-meeting-with_erik.txt
doc/source/: developer.rst
inotebooks/: Lab Meeting 23-10-2012.ipynb  Next lab meeting.ipynb  Testing Granule mechanisms.ipynb
inotebooks/tom/: 2013-02-19 Lab Meeting.ipynb  By Next Lab Meeting.ipynb  Fabios Golgi: swap-in new mechanisms.ipynb  Fabios granule: swap-in new granule mechanisms.ipynb  Lab Meeting 2012-10-23.ipynb  Lab Meeting 2012-11-27 .ipynb  Lab Meeting 2012-12-7.ipynb  Lab Meeting 2013-01-11.ipynb  Lab Meeting 2013-01-22.ipynb  Lab Meeting 2013-02-19.ipynb  Lab Meeting 2013-04-09.ipynb  Next Lab Meeting 2012-11-21.ipynb  Sergios Golgi: swap-in new mechanisms.ipynb  Swapping in and out old Golgi mechanisms.ipynb  Swapping in and out old granule mechanisms.ipynb  Synapse Testing.ipynb  Testing Golgi mechanisms.ipynb  Testing Granule mechanisms.ipynb  Testing Purkinje mechanisms.ipynb  Untitled0.ipynb
morph/: debug_fabios.xml
pype9/: utils.py
pype9/cmd/: convert.py  plot.py  simulate.py
pype9/utils/: arguments.py  units.py
scripts/: pype9
src/analysis/: __init__.py  morphology.py  overlap-resolution.py  overlap_matrix.py  pf2pc_connectivity.py  purkinje_filling.py  random_tree.py  simulation_rectangle.py  spike_counter.py  stress_testing.py  stress_testing_granule.py  validate_fabios_network.py  xy_coverages.py  xy_overlaps.py
src/neurofitter/: __init__.py  oistmpiscript  oistsub  roimpisettings.xml
src/preprocess/: genMF.m  segment_volumes.py  swc.py
src/simulate/: __init__.py  cerebellar_cortex.py  dummy.py  fabios_network.py  single_molecular_loop.py  sunghos_gap.py
src/test/: .fabios_network.py.swp  __init__.py  basic_pyneuron.py  comparison.py  debug_fabios.py  dummy.py  ellipsoid_test.py  fabios_golgis.py  fabios_mf_to_granule.py  fabios_mf_to_granules.py  fabios_network.py  gap_mwe.py  gap_test.py  golgi_tuning.py  granule_testing.py  hoc_v_pynn.py  mech_test.py  mechanisms.py  morph_test.py  morphology.py  mpi_mwe.py  run_single_cell.hoc  single_cell.hoc  single_cell.py  single_fabios_golgi.hoc  single_golgi.hoc  single_granule.hoc  single_old_granule.hoc  single_sergios_golgi.hoc  test_nest.py  test_xml_handler.py
src/tombo/: .fabios_network.que.py.swp  __init__.py  dummy.py  fabios_golgis.py  fabios_mf_to_granules.py  fabios_network.py  fabios_network.que.py  gap_test.py  mechanisms.py  neurofitter.py  single_cell.py  single_molecular_loop.py
src/utilities/: __init__.py  inotebook.py  morphology.py
src/visualize/: activity_plot.py  connection_matrix.py  hoc_single_cell_plot.py  morphology_plot.py  plot_activity.py  plot_activity_old.py  plot_connectivity.py  plot_hoc_single_cell.py  plot_morphology.py  plot_state.py  single_cell_hoc_plot.py  state_plot.py  validate_fabios_network.py
test/compare/nest/src/: Makefile.am  archiving_node.h  arraydatum.h  branch.cpp  branch.h  conditions.h  config.h  dict.h  event.h  main.cpp  master.cpp  master.h  mock_nest.cpp  mock_nest.h  mock_sli.cpp  mock_sli.h  name.cpp  nest.h  nest_time.cpp  nest_time.h  network.h  numerics.cpp  setup.h  tarrayobj.cpp  tarrayobj.h  token.h  tokenarray.cpp  tokenarray.h  universal_data_logger.h
test/compare/nest/src/models/: PyNNLeakyIntegrateAndFire.h
test/pynn_models/: adexp.xml  adexpClass.xml  expisyn.xml  expisynClass.xml  gap.xml  gapClass.xml  gsfa_grr.xml  gsfa_grrClass.xml  hh_traub.xml  hh_traubClass.xml  izhikevich.xml  izhikevichClass.xml  refrac.xml  refracClass.xml  reset.xml  resetClass.xml  stdwa_guetig.xml  stdwa_guetigClass.xml  stdwa_softlimits.xml  stdwa_softlimitsClass.xml  stdwa_songabbott.xml  stdwa_songabbottClass.xml  stdwa_symm.xml  stdwa_symmClass.xml  stdwa_vogels2011.xml  stdwa_vogels2011Class.xml  tmgsyn.xml  tmgsynClass.xml  (+2 more)
test/raw/nest/: IzhikevichBranch.cpp  IzhikevichMaster.cpp  Makefile.am  configure.ac  main.cpp  mock_nest.cpp  mock_nest.h
test/raw/nest/src/: branch.h  main.cpp  master.h  mock_nest.cpp  mock_nest.h
test/side-by-side/nest/: autogen.sh  configure.ac
test/side-by-side/nest/src/: Makefile.am  generated.cpp  generated.h  reference.cpp  reference.h
(+164 files in other folders)
